# rdf-prettifier

./: .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  noxfile.py  openapi.py  openapi.yaml  openapi.yml  pyproject.toml
.github/workflows/: constraints.txt  coverage.yaml  deploy-prod&demo.yaml  deploy-staging.yaml
deploy/base/: deployment-fdk-rdf-parser-service.yaml  deployment-rdf-prettifier.yaml  kustomization.yaml  service-rdf-prettifier.yaml
deploy/prod/: env.yaml  kustomization.yaml
deploy/staging/: env.yaml  kustomization.yaml
rdf_diff_store/: auth.py  git.py  main.py  models.py  rdf.py  sparql.py
rdf_prettifier/: __init__.py  auth.py  main.py  models.py  rdf.py
tests/: conftest.py
tests/contract/: __init__.py  test_contract.py  test_real_dataset.py
tests/integration/: test_integration.py
tests/unit/: test_unit.py
