[tool.poetry]
name = "rdf-prettifier"
version = "0.1.0"
description = "Prettifies RDF graphs"
authors = ["Digdir <fellesdatakatalog@digdir.no>"]
homepage = "https://github.com/Informasjonsforvaltning/rdf-prettifier"
readme = "README.md"
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.11"
fastapi = "^0.108.0"
uvicorn = {version = "^0.23.2"}
GitPython = "^3.1.40"
rdflib = "^7.0.0"
types-aiofiles = "^23.2.0.0"
aiofiles = "^23.2.1"
pip = "^23.3.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.6.1"
black = "^23.10.1"
flake8 = "^6.1.0"
flake8-annotations = "^3.0.1"
flake8-bandit = "^4.1.1"
flake8-black = "^0.3.6"
flake8-builtins = "^2.1.0"
flake8-bugbear = "^23.9.16"
flake8-docstrings = "^1.7.0"
flake8-import-order = "^0.18.2"
flake8-isort = "^6.1.0"
flake8-rst-docstrings = "^0.3.0"
pep8-naming = "^0.13.3"
pytest = "^7.4.3"
coverage = {extras = ["toml"], version = "^7.3.2"}
safety = "^2.3.5"
codecov = "^2.1.13"
pytest-docker = "^2.0.1"
requests = "^2.31.0"
types-requests = "^2.31.0.20240125"
PyYAML = "^6.0.1"
pytest-asyncio = "^0.23.3"


[tool.pytest.ini_options]
markers = [
  "unit: marks tests as unit (fast)",
  "integration: marks tests as integration (slower)",
  "contract: marks test as contract (slow)",
  "asyncio"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
source = ["rdf_prettifier"]

[tool.coverage.report]
fail_under = 100
