[tool.poetry]
name = "rdf-prettifier"
version = "0.1.0"
description = "Prettifies RDF graphs"
authors = ["Digdir <fellesdatakatalog@digdir.no>"]
homepage = "https://github.com/Informasjonsforvaltning/rdf-prettifier"
readme = "README.md"
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.11"
fastapi = "^0.112.2"
uvicorn = {version = "^0.30.6"}
GitPython = "^3.1.43"
rdflib = "^7.0.0"
types-aiofiles = "^24.1.0.20240626"
aiofiles = "^24.1.0"
pip = "^24.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"
black = "^24.8.0"
flake8 = "^7.1.1"
flake8-annotations = "^3.1.1"
flake8-bandit = "^4.1.1"
flake8-black = "^0.3.6"
flake8-builtins = "^2.5.0"
flake8-bugbear = "^24.8.19"
flake8-docstrings = "^1.7.0"
flake8-import-order = "^0.18.2"
flake8-isort = "^6.1.1"
flake8-rst-docstrings = "^0.3.0"
pep8-naming = "^0.14.1"
pytest = "^8.3.2"
coverage = {extras = ["toml"], version = "^7.6.1"}
codecov = "^2.1.13"
pytest-docker = "^3.1.1"
requests = "^2.32.3"
types-requests = "^2.32.0.20240712"
PyYAML = "^6.0.2"
pytest-asyncio = "^0.24.0"


[tool.pytest.ini_options]
markers = [
  "unit: marks tests as unit (fast)",
  "integration: marks tests as integration (slower)",
  "contract: marks test as contract (slow)",
  "asyncio"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
source = ["rdf_prettifier"]

[tool.coverage.report]
fail_under = 100
